better default page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  background-color: #2d323c;
+  color: #a2ca7f;
+  font-family: Menlo, serif;
+}
