better landing page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>hello world!</h1>
-<h2>(this is <span class="strokeme">roland</span>)</h2>
+<div class="text">
+  this is <span class="strokeme">roland</span>
+</div>
+
