--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,50 @@
-html {
-  background-color: #2d323c;
-  color: #a2ca7f;
-  font-family: Menlo, serif;
+$color-background: #2d323c;
+$color-text-green: #a2ca7f;
+$color-text-yellow: #e1c17e;
+$color-transparent: rgb(46, 51, 61);
+$font-fam-std: Menlo, serif;
+
+html{
+  background-color: $color-background;
+  color: $color-text-green;
+  font-family: $font-fam-std;
+}
+
+.strokeme {
+  color: $color-transparent;
+  text-shadow: -1px -1px 0 $color-text-yellow, 1px -1px 0 $color-text-yellow, -1px 1px 0 $color-text-yellow, 1px 1px 0 $color-text-yellow;
+}
+
+.text {
+  position: relative;
+  display: inline-block;
+  font-family: $font-fam-std;
+  line-height: 1em;
+  font-size: 1em;
+}
+
+.text::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -1em;
+  display: inline-block;
+  background-color: $color-text-green;
+  vertical-align: top;
+  width: 0.5em;
+  height: 1em;
+  -webkit-animation: blink 1s step-end infinite;
+  animation: blink 1s step-end infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1.0;
+  }
+  50% {
+    opacity: 0.0;
+  }
+  100% {
+    opacity: 1.0;
+  }
 }
