--- a/src/app/platecontent/platecontent.component.html
+++ b/src/app/platecontent/platecontent.component.html
@@ -1,8 +1,9 @@
-<plateselection (addPlate)="addPlate($event)">
+<plateselection (addPlate)="addPlate($event)"
+                (resetPlates)="reset()">
 </plateselection>
 <mat-chip-grid #chipGrid aria-label="Available plates">
     @for (plate of plates; track plate) {
-        <mat-chip-row (removed)="remove(plate)">
+        <mat-chip-row (removed)="remove(plate)" (click)="remove(plate)">
             {{ plate.weight }}
             <button matChipRemove [attr.aria-label]="'remove ' + plate.weight">
                 <mat-icon>cancel</mat-icon>
