added repo link..

--- a/src/app/component/platecontent/platecontent.component.html
+++ b/src/app/component/platecontent/platecontent.component.html
@@ -1,13 +1,19 @@
-<plateselection (addPlate)="addPlate($event)"
-                (resetPlates)="reset()">
-</plateselection>
-<mat-chip-set aria-label="Available plates">
-    @for (plate of plates; track plate.id) {
-        <mat-chip (click)="remove(plate.id)">
-            {{ plate.weight }}
-        </mat-chip>
-    }
-</mat-chip-set>
-<weight-input (weightChanged)="weightChanged($event)"></weight-input>
-<platedisplay [plates]="stackedPlates"></platedisplay>
+<div class="container">
+    <div class="selection">
+        <plateselection (addPlate)="addPlate($event)"
+                        (resetPlates)="reset()">
+        </plateselection>
+    </div>
+
+    <mat-chip-set aria-label="Available plates">
+        @for (plate of plates; track plate.id) {
+            <mat-chip (click)="remove(plate.id)">
+                {{ plate.weight }}
+            </mat-chip>
+        }
+    </mat-chip-set>
+    <weight-input (weightChanged)="weightChanged($event)"></weight-input>
+    <platedisplay [plates]="stackedPlates"></platedisplay>
+</div>
+
 
