--- a/src/app/component/platedisplay/platedisplay.component.html
+++ b/src/app/component/platedisplay/platedisplay.component.html
@@ -4,6 +4,6 @@
             <div class="plate" [ngStyle]="{'background-color': plate.color}"></div>
         }
     </div>
-    <div class="middle"></div>
+    <div class="middle"><h2>{{ sum(plates) }} + (20 for the bar)</h2></div>
     <div class="right"></div>
 </div>
