--- a/src/app/component/platedisplay/platedisplay.component.scss
+++ b/src/app/component/platedisplay/platedisplay.component.scss
@@ -1,9 +1,12 @@
-$barbellspace: value 30%;
+$barbellspace: 30%;
 
 
 .container {
+  height: 150px;
   width: 100%;
-  display: flex; /* or inline-flex */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background: linear-gradient(
                   to bottom,
                   rgba(0, 0, 0, 0) 40%,
@@ -21,7 +24,8 @@ $barbellspace: value 30%;
 }
 
 .middle {
-  width: calc(100% - 2 * #{barbellspace});
+  text-align: center;
+  width: 100%;
 }
 
 .plate {
