added 5kg button

--- a/src/app/component/platecontent/platecontent.component.html
+++ b/src/app/component/platecontent/platecontent.component.html
@@ -13,8 +13,12 @@
             }
         </mat-chip-set>
     </div>
-    <weight-input (weightChanged)="weightChanged($event)"></weight-input>
-    <platedisplay [plates]="stackedPlates"></platedisplay>
+    <div>
+        <weight-input (weightChanged)="weightChanged($event)"></weight-input>
+    </div>
+    <div>
+        <platedisplay [plates]="stackedPlates"></platedisplay>
+    </div>
 </div>
 
 
