--- a/src/app/component/plateselection/plateselection.component.html
+++ b/src/app/component/plateselection/plateselection.component.html
@@ -4,3 +4,6 @@
 <button (click)="add(plate('black', 20))" mat-button>
     ADD 20
 </button>
+<button (click)="add(plate('black', 5))" mat-button>
+    ADD 5
+</button>
