--- a/src/app/component/platedisplay/platedisplay.component.scss
+++ b/src/app/component/platedisplay/platedisplay.component.scss
@@ -33,6 +33,13 @@ $barbellspace: 30%;
 }
 
 .plate {
+  color: #ffffff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 26px;
+  font-weight: 800;
+  text-align: center;
+  text-transform: uppercase;
+  writing-mode: vertical-rl;
   border-radius: 10px;
   border-inline-width: 5px;
   background: #73AD21;
@@ -40,4 +47,5 @@ $barbellspace: 30%;
   width: 10px;
   height: 80%;
   margin: 0 1px 0 1px;
+  line-height: 10px;
 }
