--- a/src/app/component/plateselection/plateselection.component.html
+++ b/src/app/component/plateselection/plateselection.component.html
@@ -1,21 +1,10 @@
 <button (click)="reset()" mat-stroked-button color="warn">
     RESET
 </button>
-<button (click)="add(plate('black', 20))" mat-stroked-button>
-    ADD 20
-</button>
-<button (click)="add(plate('black', 10))" mat-stroked-button>
-    ADD 10
-</button>
-<button (click)="add(plate('black', 5))" mat-stroked-button>
-    ADD 5
-</button>
-<button (click)="add(plate('black', 2.5))" mat-stroked-button>
-    ADD 2.5
-</button>
-<button (click)="add(plate('black', 1.25))" mat-stroked-button>
-    ADD 1.25
-</button>
-<button (click)="add(plate('black', 1))" mat-stroked-button>
-    ADD 1
-</button>
+<button (click)="add(plate('red', 25))" mat-stroked-button>25</button>
+<button (click)="add(plate('blue', 20))" mat-stroked-button>20</button>
+<button (click)="add(plate('green', 10))" mat-stroked-button>10</button>
+<button (click)="add(plate('black', 5))" mat-stroked-button>5</button>
+<button (click)="add(plate('black', 2.5))" mat-stroked-button>2.5</button>
+<button (click)="add(plate('black', 1.25))" mat-stroked-button>1.25</button>
+<button (click)="add(plate('black', 1))" mat-stroked-button>1</button>
