--- a/src/app/component/platedisplay/platedisplay.component.html
+++ b/src/app/component/platedisplay/platedisplay.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="left">
         @for (plate of plates; track plate.id) {
-            <div class="plate" [ngStyle]="{'background-color': plate.color}">{{ plate.weight }}</div>
+            <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
         }
     </div>
-    <div class="middle"><h2> 2x{{ sum(plates) }}+20={{ 2 * sum(plates) + 20 }}</h2></div>
+    <div class="middle"><h2 class="h2"> 2x{{ sum(plates) }}+20<br>={{ 2 * sum(plates) + 20 }}</h2></div>
     <div class="right">
         @for (plate of plates; track plate.id) {
-            <div class="plate" [ngStyle]="{'background-color': plate.color}">{{ plate.weight }}</div>
+            <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
         }
     </div>
 </div>
