more clean design 2

--- a/src/app/component/plateselection/plateselection.component.html
+++ b/src/app/component/plateselection/plateselection.component.html
@@ -8,3 +8,4 @@
 <button (click)="add(plate('black', 2.5))" mat-stroked-button>2.5</button>
 <button (click)="add(plate('black', 1.25))" mat-stroked-button>1.25</button>
 <button (click)="add(plate('black', 1))" mat-stroked-button>1</button>
+<button (click)="add(plate('black', 0.5))" mat-stroked-button>0.5</button>
