--- a/src/app/component/platedisplay/platedisplay.component.html
+++ b/src/app/component/platedisplay/platedisplay.component.html
@@ -1,13 +1,22 @@
-<div class="container">
-    <div class="left">
-        @for (plate of plates; track plate.id) {
-            <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
-        }
+<div class="vertical-container">
+    <div class="bar-container">
+        <div class="left">
+            @for (plate of plates; track plate.id) {
+                <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
+            }
+        </div>
+        <div class="middle"><h2 class="h2"> 2x{{ sum(plates) }}+20<br>={{ 2 * sum(plates) + 20 }}</h2></div>
+        <div class="right">
+            @for (plate of plates; track plate.id) {
+                <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
+            }
+        </div>
     </div>
-    <div class="middle"><h2 class="h2"> 2x{{ sum(plates) }}+20<br>={{ 2 * sum(plates) + 20 }}</h2></div>
-    <div class="right">
-        @for (plate of plates; track plate.id) {
-            <div [ngStyle]="plateStyle(plate)">{{ plate.weight }}</div>
-        }
+    <div class="bar-list">
+        <!--
+        <ul>
+            <li>2x 25</li>
+        </ul>
+        -->
     </div>
 </div>
