added check for reached weight

--- a/src/app/component/platecontent/platecontent.component.html
+++ b/src/app/component/platecontent/platecontent.component.html
@@ -17,7 +17,8 @@
         <weight-input (weightChanged)="weightChanged($event)"></weight-input>
     </div>
     <div>
-        <platedisplay [plates]="stackedPlates"></platedisplay>
+        <platedisplay [plates]="stackedPlates"
+                      [desiredWeight]="desiredWeight"></platedisplay>
     </div>
 </div>
 
