--- a/src/app/component/platedisplay/platedisplay.component.scss
+++ b/src/app/component/platedisplay/platedisplay.component.scss
@@ -1,7 +1,7 @@
 $barbellspace: 39%;
 
 .h2 {
-  font-size: 4vw;
+  font-size: 3.5vw;
 }
 
 @media screen and (min-width: 700px) {
@@ -37,8 +37,21 @@ $barbellspace: 39%;
 }
 
 .middle {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   width: calc(100% - #{$barbellspace} * 2);
+}
+
+.middle-top, .middle-bottom {
+  width: 100%;
+  text-align: center;
+  height: 45%;
+}
+
+.middle-center {
+  width: 100%;
+  height: 10%;
 }
 
 .vertical-container {
