--- a/src/app/component/plateselection/plateselection.component.html
+++ b/src/app/component/plateselection/plateselection.component.html
@@ -1,11 +1,13 @@
-<button (click)="reset()" mat-stroked-button color="warn">
-    RESET
-</button>
-<button (click)="add(plate('red', 25))" mat-stroked-button>25</button>
-<button (click)="add(plate('blue', 20))" mat-stroked-button>20</button>
-<button (click)="add(plate('green', 10))" mat-stroked-button>10</button>
-<button (click)="add(plate('black', 5))" mat-stroked-button>5</button>
-<button (click)="add(plate('black', 2.5))" mat-stroked-button>2.5</button>
-<button (click)="add(plate('black', 1.25))" mat-stroked-button>1.25</button>
-<button (click)="add(plate('black', 1))" mat-stroked-button>1</button>
-<button (click)="add(plate('black', 0.5))" mat-stroked-button>0.5</button>
+<div class="button-container">
+    <button (click)="reset()" mat-stroked-button color="warn">
+        RESET
+    </button>
+    <button (click)="add(plate('red', 25))" mat-stroked-button>25</button>
+    <button (click)="add(plate('blue', 20))" mat-stroked-button>20</button>
+    <button (click)="add(plate('green', 10))" mat-stroked-button>10</button>
+    <button (click)="add(plate('black', 5))" mat-stroked-button>5</button>
+    <button (click)="add(plate('black', 2.5))" mat-stroked-button>2.5</button>
+    <button (click)="add(plate('black', 1.25))" mat-stroked-button>1.25</button>
+    <button (click)="add(plate('black', 1))" mat-stroked-button>1</button>
+    <button (click)="add(plate('black', 0.5))" mat-stroked-button>0.5</button>
+</div>
