--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,44 +30,28 @@ body {
 }
 
 a {
-  margin-top: 0px;
-  margin-bottom: 50px;
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 3rem;
-  letter-spacing: 0.15rem;
+  text-decoration: none;
+  color: #18272F;
+  font-weight: 700;
+  position: relative;
   text-transform: uppercase;
-  color: #fff;
-  text-shadow: -4px 4px #ef3550,
-  -8px 8px #f48fb1,
-  -12px 12px #7e57c2,
-  -16px 16px #2196f3,
-  -20px 20px #26c6da,
-  -24px 24px #43a047,
-  -28px 28px #eeff41,
-  -32px 32px #f9a825,
-  -36px 36px #ff5722;
-
 }
 
-a:hover {
-  margin-top: 0px;
-  margin-bottom: 50px;
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 3rem;
-  letter-spacing: 0.15rem;
+a::before {
+  content: '';
+  background-color: hsla(196, 61%, 58%, .75);
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  height: 2px;
+  z-index: -1;
+  transition: all .3s ease-in-out;
   text-transform: uppercase;
+}
 
-  color: #ff5722;
-  text-shadow: -4px 4px #fff,
-  -8px 8px #eeff41,
-  -12px 12px #7e57c2,
-  -16px 16px #ff5722,
-  -20px 20px #26c6da,
-  -24px 24px #43a047,
-  -28px 28px #f48fb1,
-  -32px 32px #2196f3,
-  -36px 36px #f9a825;
-
+a:hover::before {
+  bottom: 0;
+  height: 100%;
+  text-transform: uppercase;
 }
