--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,13 +20,12 @@ body {
 
 .app {
   width: 100%;
-  height: calc(100% - 20px);
+  height: calc(100% - 1.1em);
 }
 
 .footer {
   text-align: center;
   align-content: center;
-  height: 50px;
 }
 
 a {
