--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<platecontent></platecontent>
+<div class="content-container">
+    <div class="content-center">
+        <platecontent></platecontent>
+    </div>
+</div>
